Add retries for embedded broker connections.
Refs #79280

--- a/wres-statistics/nonsrc/jndi.properties
+++ b/wres-statistics/nonsrc/jndi.properties
@@ -3,7 +3,7 @@ java.naming.factory.initial = org.apache.qpid.jndi.PropertiesFileInitialContextF
 
 # Define the required ConnectionFactory instances
 # connectionfactory.<JNDI-lookup-name> = <URI>
-connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='tcp://localhost:5672'
+connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='tcp://localhost:5672?retries='5''
 
 # Configure the necessary Queue and/or Topic objects
 # queue.<JNDI-lookup-name> = <queue-name>
