Adds wres.events for publishing and subscribing to evaluation events that are encapsulated as messages.
Adds a junit test to illustrate topic-based routing for the major evaluation message types.

Refs #79280

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include 'wres-util', 'wres-system', 'wres-datamodel', 'wres-io', 'wres-metrics', 'wres-statistics', 'wres-vis', 'wres-config', 'wres-grid', 'wres-worker', 'wres-tasker', 'wres-messages', 'wres-eventsbroker'
+include 'wres-util', 'wres-system', 'wres-datamodel', 'wres-io', 'wres-metrics', 'wres-statistics', 'wres-vis', 'wres-config', 'wres-grid', 'wres-worker', 'wres-tasker', 'wres-messages', 'wres-eventsbroker', 'wres-events'
 rootProject.name = 'wres'
 
