--- a/wres-eventsbroker/nonsrc/jndi.properties
+++ b/wres-eventsbroker/nonsrc/jndi.properties
@@ -8,5 +8,10 @@ connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='t
 # Configure the necessary Queue and/or Topic objects
 # queue.<JNDI-lookup-name> = <queue-name>
 # topic.<JNDI-lookup-name> = <topic-name>
-queue.statisticsQueue = queue
-topic.statisticsTopic = topic
+# queue.statisticsQueue = queue
+
+# Written in long form to expose finer grain control of the binding URL (BURL), but equivalent to: topic.evaluationTopic = evaluation
+# One topic under amq.topic for each type of message/subject
+topic.evaluationTopic=BURL:topic://amq.topic/evaluation?routingkey='evaluation'&exclusive='true'&autodelete='true'
+topic.evaluationStatusTopic=BURL:topic://amq.topic/status?routingkey='status'&exclusive='true'&autodelete='true'
+topic.statisticsTopic=BURL:topic://amq.topic/statistics?routingkey='statistics'&exclusive='true'&autodelete='true'
