--- a/build.gradle
+++ b/build.gradle
@@ -1099,6 +1099,20 @@ project(':wres-eventsbroker')
     }
 }
 
+project(':wres-events')
+{
+    dependencies
+    {
+        compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
+
+        // JMS API
+        compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
+
+        testCompile 'junit:junit:4.13'
+    }
+}
+
 /* Single report for test coverage, thanks to
 https://discuss.gradle.org/t/merge-jacoco-coverage-reports-for-multiproject-setups/12100/5
  */
