--- a/build.gradle
+++ b/build.gradle
@@ -651,21 +651,8 @@ project(':wres-statistics')
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         testCompile 'junit:junit:4.13'
-        
-        // QPID broker
-        testCompile 'org.apache.qpid:qpid-broker-core:7.1.8'
-
-        // QPID broker support for AMQP 0.8 and 0.9.1 (not 1.0)
-        testCompile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.8'
-
-        // QPID embedded (aka in-memory) broker support
-        testCompile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.8'
-
-        // https://mvnrepository.com/artifact/org.apache.qpid/qpid-broker-plugins-management-http
-        testCompile group: 'org.apache.qpid', name: 'qpid-broker-plugins-management-http', version: '8.0.0'
-
-        // QPID JMS client for AMQP 0.X (not 1.0)
-        testCompile group: 'org.apache.qpid', name: 'qpid-client', version: '6.3.4'
+        testCompile project( ':wres-events' )
+        testCompile project( ':wres-eventsbroker' )
     }
 }
 
@@ -1092,10 +1079,10 @@ project(':wres-eventsbroker')
         // https://mvnrepository.com/artifact/org.apache.qpid/qpid-broker-plugins-management-http
         compile group: 'org.apache.qpid', name: 'qpid-broker-plugins-management-http', version: '8.0.0'
 
-        testCompile 'junit:junit:4.13'
-
         // QPID JMS client for AMQP 0.X (not 1.0)
-        testCompile group: 'org.apache.qpid', name: 'qpid-client', version: '6.3.4'
+        compile group: 'org.apache.qpid', name: 'qpid-client', version: '6.3.4'
+
+        testCompile 'junit:junit:4.13'
     }
 }
 
