Abstracts an evaluation as a collection of events to which messages are attached.
Includes a unit test to illustrate the lifecycle of one evaluation and of N evaluations.

Refs #79280

--- a/wres-eventsbroker/nonsrc/embedded-broker-config.json
+++ b/wres-eventsbroker/nonsrc/embedded-broker-config.json
@@ -50,7 +50,12 @@
             "name": "wres-statistics",
             "type": "Memory",
             "defaultVirtualHostNode": "true",
-            "virtualHostInitialConfiguration": "{\"type\": \"Memory\", \"nodeAutoCreationPolicies\": [{\"pattern\":\".*\",\"createdOnPublish\":\"true\",\"createdOnConsume\":\"true\",\"nodeType\":\"queue\",\"attributes\":{}}] }"
+            "context": 
+            { 
+                "queue.defaultAlternateBinding": "{\"destination\": \"$${this:name}_DLQ\"} }",
+                "queue.maximumDeliveryAttempts": "2"
+            },
+            "virtualHostInitialConfiguration": "{\"type\": \"Memory\", \"nodeAutoCreationPolicies\": [{\"pattern\":\".*_DLQ\",\"createdOnPublish\":\"true\",\"createdOnConsume\":\"true\",\"nodeType\":\"queue\",\"attributes\":{\"alternateBinding\": \"\", \"maximumDeliveryAttempts\":\"5\"}}] }"
         }
     ],
     "plugins" : [ {
