--- a/wres-eventsbroker/nonsrc/jndi.properties
+++ b/wres-eventsbroker/nonsrc/jndi.properties
@@ -3,7 +3,7 @@ java.naming.factory.initial = org.apache.qpid.jndi.PropertiesFileInitialContextF
 
 # Define the required ConnectionFactory instances
 # connectionfactory.<JNDI-lookup-name> = <URI>
-connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='tcp://localhost:5673'
+connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='tcp://localhost:5673'&rejectbehaviour='server'
 
 # Configure the necessary Queue and/or Topic objects
 # queue.<JNDI-lookup-name> = <queue-name>
@@ -12,6 +12,6 @@ connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='t
 
 # Written in long form to expose finer grain control of the binding URL (BURL), but equivalent to: topic.evaluationTopic = evaluation
 # One topic under amq.topic for each type of message/subject
-topic.evaluationTopic=BURL:topic://amq.topic/evaluation?routingkey='evaluation'&exclusive='true'&autodelete='true'
-topic.evaluationStatusTopic=BURL:topic://amq.topic/status?routingkey='status'&exclusive='true'&autodelete='true'
-topic.statisticsTopic=BURL:topic://amq.topic/statistics?routingkey='statistics'&exclusive='true'&autodelete='true'
+topic.evaluation=BURL:topic://amq.topic/evaluation?routingkey='evaluation'&exclusive='true'&autodelete='true'
+topic.status=BURL:topic://amq.topic/status?routingkey='status'&exclusive='true'&autodelete='true'
+topic.statistics=BURL:topic://amq.topic/statistics?routingkey='statistics'&exclusive='true'&autodelete='true'
