--- a/build.gradle
+++ b/build.gradle
@@ -645,13 +645,13 @@ project(':wres-statistics')
         // Cap'n proto
         compile group: 'org.capnproto', name: 'runtime', version: '0.1.5'
 
-        // JMS API
-        compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
+        // JMS API ( QPID client implements 1.1, but 1.1 is not available on maven )
+        // https://issues.sonatype.org/browse/MVNCENTRAL-348
+        testCompile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
         testCompile 'junit:junit:4.13'
-        testCompile project( ':wres-events' )
         testCompile project( ':wres-eventsbroker' )
     }
 }
@@ -1064,23 +1064,24 @@ project(':wres-eventsbroker')
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
-        // JMS API
+        // JMS API ( QPID client implements 1.1, but 1.1 is not available on maven )
+        // https://issues.sonatype.org/browse/MVNCENTRAL-348
         compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
         
         // QPID broker
-        compile 'org.apache.qpid:qpid-broker-core:7.1.8'
+        compile 'org.apache.qpid:qpid-broker-core:8.0.0'
 
         // QPID broker support for AMQP 0.8 and 0.9.1 (not 1.0)
-        compile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:7.1.8'
+        compile 'org.apache.qpid:qpid-broker-plugins-amqp-0-8-protocol:8.0.0'
 
         // QPID embedded (aka in-memory) broker support
-        compile 'org.apache.qpid:qpid-broker-plugins-memory-store:7.1.8'
+        compile 'org.apache.qpid:qpid-broker-plugins-memory-store:8.0.0'
 
         // https://mvnrepository.com/artifact/org.apache.qpid/qpid-broker-plugins-management-http
         compile group: 'org.apache.qpid', name: 'qpid-broker-plugins-management-http', version: '8.0.0'
 
-        // QPID JMS client for AMQP 0.X (not 1.0)
-        compile group: 'org.apache.qpid', name: 'qpid-client', version: '6.3.4'
+        // QPID JMS client for AMQP 0.X (not 1.0). JMS 1.1 support only
+        compile group: 'org.apache.qpid', name: 'qpid-client', version: '6.4.0'
 
         testCompile 'junit:junit:4.13'
     }
@@ -1090,10 +1091,14 @@ project(':wres-events')
 {
     dependencies
     {
+        compile project( ':wres-eventsbroker' )
+        compile project( ':wres-statistics' )
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
-        // JMS API
+        // JMS API ( QPID client implements 1.1, but 1.1 is not available on maven )
+        // https://issues.sonatype.org/browse/MVNCENTRAL-348
         compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 
         testCompile 'junit:junit:4.13'
