--- a/build.gradle
+++ b/build.gradle
@@ -1094,6 +1094,8 @@ project(':wres-events')
         compile project( ':wres-eventsbroker' )
         compile project( ':wres-statistics' )
         compile 'org.slf4j:slf4j-api:1.8.0-beta4'
+        // JCIP annotations
+        compile group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
 
@@ -1102,6 +1104,9 @@ project(':wres-events')
         compile group: 'javax.jms', name: 'javax.jms-api', version: '2.0.1'
 
         testCompile 'junit:junit:4.13'
+
+        // Mocking help
+        testCompile 'org.mockito:mockito-core:3.3.3'
     }
 }
 
