Allows for the publications of, and subscriptions to, pairs within an evaluation.
Promotes thresholds to the pool description.

Refs #80267

--- a/wres-eventsbroker/nonsrc/jndi.properties
+++ b/wres-eventsbroker/nonsrc/jndi.properties
@@ -16,3 +16,4 @@ connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='t
 topic.evaluation=BURL:topic://amq.topic/evaluation?routingkey='evaluation'&exclusive='true'&autodelete='true'
 topic.status=BURL:topic://amq.topic/status?routingkey='status'&exclusive='true'&autodelete='true'
 topic.statistics=BURL:topic://amq.topic/statistics?routingkey='statistics'&exclusive='true'&autodelete='true'
+topic.pairs=BURL:topic://amq.topic/pairs?routingkey='pairs'&exclusive='true'&autodelete='true'
