--- a/wres-eventsbroker/nonsrc/jndi.properties
+++ b/wres-eventsbroker/nonsrc/jndi.properties
@@ -13,7 +13,7 @@ connectionfactory.statisticsFactory = amqp://guest:guest@clientid/?brokerlist='t
 
 # Written in long form to expose finer grain control of the binding URL (BURL), but equivalent to: topic.evaluationTopic = evaluation
 # One topic under amq.topic for each type of message/subject
-topic.evaluation=BURL:topic://amq.topic/evaluation?routingkey='evaluation'&exclusive='true'&autodelete='true'
-topic.status=BURL:topic://amq.topic/status?routingkey='status'&exclusive='true'&autodelete='true'
-topic.statistics=BURL:topic://amq.topic/statistics?routingkey='statistics'&exclusive='true'&autodelete='true'
-topic.pairs=BURL:topic://amq.topic/pairs?routingkey='pairs'&exclusive='true'&autodelete='true'
+topic.evaluation=BURL:topic://amq.topic/evaluation?routingkey='evaluation'&exclusive='false'&autodelete='true'
+topic.status=BURL:topic://amq.topic/status?routingkey='status'&exclusive='false'&autodelete='true'
+topic.statistics=BURL:topic://amq.topic/statistics?routingkey='statistics'&exclusive='false'&autodelete='true'
+topic.pairs=BURL:topic://amq.topic/pairs?routingkey='pairs'&exclusive='false'&autodelete='true'
