--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ plugins
     
     // Task to assist in downloading artifacts
     id "de.undercouch.download" version "4.0.4"
+
+    // To discover library versions with updates available
+    id 'com.github.ben-manes.versions' version '0.28.0'
 }
 
 repositories
