--- a/wres-tasker/Dockerfile
+++ b/wres-tasker/Dockerfile
@@ -6,8 +6,25 @@ RUN dnf install -y \
     which-2.21-12.el8 \
     # The following aren't direct dependencies of WRES, are updates post-8.2.2004
     bind-export-libs-9.11.13-5.el8_2 \
+    dbus-1.12.8-10.el8_2 \
+    dbus-common-1.12.8-10.el8_2 \
+    dbus-daemon-1.12.8-10.el8_2 \
+    dbus-libs-1.12.8-10.el8_2 \
+    dbus-tools-1.12.8-10.el8_2 \
+    dnf-4.2.17-7.el8_2 \
+    dnf-data-4.2.17-7.el8_2 \
     gnutls-3.6.8-11.el8_2 \
+    iptables-libs-1.8.4-10.el8_2.1 \
+    libdnf-0.39.1-6.el8_2 \
     libnghttp2-1.33.0-3.el8_2.1 \
+    python3-dnf-4.2.17-7.el8_2 \
+    python3-hawkey-0.39.1-6.el8_2 \
+    python3-libdnf-0.39.1-6.el8_2 \
+    systemd-239-31.el8_2.2 \
+    systemd-libs-239-31.el8_2.2 \
+    systemd-pam-239-31.el8_2.2 \
+    systemd-udev-239-31.el8_2.2 \
+    yum-4.2.17-7.el8_2 \
     && dnf clean all
 
 # See comments in main/worker/root wres Dockerfile
