--- a/wres-broker/nonsrc/rabbitmq-ti.config
+++ b/wres-broker/nonsrc/rabbitmq-ti.config
@@ -13,6 +13,7 @@
             {
                 ssl_options,
                 [
+                    { versions, [ "tlsv1.2" ] },
                     { cacertfile, "/wres_secrets/wres_ca_x509_cert.pem" },
                     { certfile, "/wres_secrets/***REMOVED***wres-broker-ti_server_x509_cert.pem" },
                     { keyfile, "/wres_secrets/***REMOVED***wres-broker-ti_server_private_rsa_key.pem" },
@@ -60,6 +61,7 @@
                     {
                         ssl_opts,
                         [
+                            { versions, [ "tlsv1.2" ] },
                             { cacertfile, "/wres_secrets/wres_ca_x509_cert.pem" },
                             { certfile, "/wres_secrets/***REMOVED***wres-broker-ti_server_x509_cert.pem" },
                             { keyfile, "/wres_secrets/***REMOVED***wres-broker-ti_server_private_rsa_key.pem" },
