Correct broker TLS 1.2 config: single-quote not double-quote
Add TLS 1.3 as well. It is not yet available but the config will
be ready for it when the underlying rabbitmq image allows it.

Fixes #77542

--- a/wres-broker/nonsrc/rabbitmq.config
+++ b/wres-broker/nonsrc/rabbitmq.config
@@ -2,7 +2,7 @@
     {
         ssl,
         [
-            { versions, [ "tlsv1.2" ] }
+            { versions, [ "tlsv1.3", "tlsv1.2" ] }
         ]
     },
     {
@@ -13,7 +13,7 @@
             {
                 ssl_options,
                 [
-                    { versions, [ "tlsv1.2" ] },
+                    { versions, [ 'tlsv1.3', 'tlsv1.2' ] },
                     { cacertfile, "/wres_secrets/wres_ca_x509_cert.pem" },
                     { certfile, "/wres_secrets/***REMOVED***wres-broker_server_x509_cert.pem" },
                     { keyfile, "/wres_secrets/***REMOVED***wres-broker_server_private_rsa_key.pem" },
@@ -61,7 +61,7 @@
                     {
                         ssl_opts,
                         [
-                            { versions, [ "tlsv1.2" ] },
+                            { versions, [ 'tlsv1.3', 'tlsv1.2' ] },
                             { cacertfile, "/wres_secrets/wres_ca_x509_cert.pem" },
                             { certfile, "/wres_secrets/***REMOVED***wres-broker_server_x509_cert.pem" },
                             { keyfile, "/wres_secrets/***REMOVED***wres-broker_server_private_rsa_key.pem" },
