Makes the OneGroupConsumer retry friendly.
Resolves relative paths as absolute paths before they are supplied to an external graphics client.

When creating an embedded broker, first try a configured port (in order to share an instance between clients).

Adds a separate eventbroker.properties for unit testing.

Refs #81735

--- a/wres-eventsbroker/nonsrc/embedded-broker-config.json
+++ b/wres-eventsbroker/nonsrc/embedded-broker-config.json
@@ -13,7 +13,7 @@
     [
         {
             "name": "wres-statistics-AMQP",
-            "port": "0",
+            "port": "${qpid.amqp_port}",
             "protocols":
             [
                 "AMQP_0_9_1"
@@ -47,7 +47,7 @@
             "defaultVirtualHostNode": "true",
             "context": 
             { 
-                "queue.defaultAlternateBinding": "{\"destination\": \"$${this:name}_DLQ\"} }",
+                "uncomment_for_dlqs:queue.defaultAlternateBinding": "{\"destination\": \"$${this:name}_DLQ\"} }",
                 "queue.maximumDeliveryAttempts": "2"
             },
             "virtualHostInitialConfiguration": "{\"type\": \"Memory\", \"connectionThreadPoolSize\": \"8\", \"numberOfSelectors\": \"1\", \"nodeAutoCreationPolicies\": [{\"pattern\":\".*_DLQ\",\"createdOnPublish\":\"true\",\"createdOnConsume\":\"true\",\"nodeType\":\"queue\",\"attributes\":{\"alternateBinding\": \"\", \"maximumDeliveryAttempts\":\"5\"}}] }"
