--- a/build.gradle
+++ b/build.gradle
@@ -797,7 +797,7 @@ project(':wres-vis')
 {
     apply plugin: 'application'
 
-    mainClassName = 'wres.vis.server.GraphicsServer'
+    mainClassName = 'wres.vis.client.GraphicsClient'
     applicationDefaultJvmArgs = ['-Xms128m','-Xmx128m',
                                  '-XX:+HeapDumpOnOutOfMemoryError']
 
