Use redisson and redis persistence to cache job metadata
Split the RAM between redis and tasker. Use redisson analogues to
existing Map and Set data structures for caching data, with expiration
set to 14 days by default.

As of this commit, the expiration of the stdout and stderr inner Map
instances do not actually expire, they appear to be stored forever.
But this still is an improvement over the previous version where the
data were kept for as little as a few seconds. An aof file will need
to be removed every now and then if this exact approach makes it to
production.

Refs #55405

--- a/docker-compose-all-roles.yml
+++ b/docker-compose-all-roles.yml
@@ -1,9 +1,19 @@
 version: '2.2'
 services:
+    persister:
+        image: "redis:6.0.7-alpine3.12"
+        restart: always
+        volumes:
+         # For the job data
+         - /mnt/wres_share/job_data:/data
+        # Enable persistence
+        command: --appendonly yes
+        mem_limit: 940m
+        read_only: true
     tasker:
         ports:
          - "443:8443"
-        image: "${DOCKER_REGISTRY}/wres/wres-tasker:20200824-721d0c4"
+        image: "${DOCKER_REGISTRY}/wres/wres-tasker:20200908-TBD"
         restart: always
         depends_on:
          - "broker"
@@ -15,9 +25,9 @@ services:
         environment:
          # Make sure to pass through WRES_ENV_SUFFIX to tasker at runtime
          - JAVA_OPTS=-Dwres.broker=broker -Dwres.environment=${WRES_ENV_SUFFIX} -XX:HeapDumpPath=/mnt/wres_share/ -XX:OnOutOfMemoryError='mv /mnt/wres_share/java_pid%p.hprof /mnt/wres_share/java_pid%p_`hostname`.hprof; chmod 775 /mnt/wres_share/java_pid%p_`hostname`.hprof'
-        # Tasker JVM should have 1305m max heap specified at launch
+        # Tasker JVM should have 340m max heap specified at launch
         # The total limit includes stack space which depends on Thread count
-        mem_limit: 1880m
+        mem_limit: 940m
         cap_drop:
          - ALL
         read_only: true
