--- a/build.gradle
+++ b/build.gradle
@@ -1105,10 +1105,11 @@ project(':wres-tasker')
         // Update the jetty-continuation depended upon by above jersey dep
         compile 'org.eclipse.jetty:jetty-continuation:9.4.31.v20200723'
 
-        compile 'com.github.ben-manes.caffeine:caffeine:2.8.5'
-
         // To accurately detect mime types of files.
         compile 'org.apache.tika:tika-core:1.24.1'
+
+        // To persist job metadata while keeping it relatively fast
+        compile 'org.redisson:redisson:3.13.4'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
         runtime 'org.glassfish.jersey.core:jersey-server:2.31'
@@ -1133,7 +1134,7 @@ project(':wres-tasker')
     apply plugin: 'application'
 
     mainClassName = 'wres.tasker.Tasker'
-    applicationDefaultJvmArgs = ['-Xms1305m','-Xmx1305m',
+    applicationDefaultJvmArgs = ['-Xms340m','-Xmx340m',
                                  '-XX:+HeapDumpOnOutOfMemoryError']
 
     // Add static html files to the classpath when running via script
