Provide consistent view of job metadata, expire after 14 days
First, resolve #81515 with JobMetadata to provide a single class where
job metadata is kept. JobMetadata has one interface but will use
redisson's live object service (on redis) when -Dwres.redisHost is
specified or fall back on caffeine soft-reference-eviction cache when
-Dwres.redisHost is not specified.

Second, keep a Map of job ids to JobMetadata. Again, single interface,
uses redisson's distributed collection (on redis) when
-Dwres.redisHost is specified or caffeine soft-reference-eviction
cache when -Dwres.redisHost is not specified.

Use TTL expiration on the Map<String,JobMetadata> when using redisson
to clear old jobs and an event handler to (attempt) to remove the job
metadata when expired from the Map.

Redis is therefore not required, but opens up new possibilities such
as running multiple taskers simultaneously sharing objects via redis.
This has not been implemented or tested, but the groundwork is here.

With persistence enabled on the redis instance, job metadata survives
tasker restarts.

Refs #55405
Fixes #81515

--- a/build.gradle
+++ b/build.gradle
@@ -1105,11 +1105,17 @@ project(':wres-tasker')
         // Update the jetty-continuation depended upon by above jersey dep
         compile 'org.eclipse.jetty:jetty-continuation:9.4.31.v20200723'
 
+        // To temporarily cache/store-in-RAM job metadata when redis unavailable
+        compile 'com.github.ben-manes.caffeine:caffeine:2.8.5'
+
         // To accurately detect mime types of files.
         compile 'org.apache.tika:tika-core:1.24.1'
 
         // To persist job metadata while keeping it relatively fast
         compile 'org.redisson:redisson:3.13.4'
+
+        // For ToStringBuilder
+        compile 'org.apache.commons:commons-lang3:3.11'
 
         runtime 'ch.qos.logback:logback-classic:1.3.0-alpha4'
         runtime 'org.glassfish.jersey.core:jersey-server:2.31'
